@@ -3,6 +3,12 @@ FEB 24 2021
 	::bothelp command added
 	SleepListener has been replaced with SleepCallback. This will increase performance, since one less thread will be
 	    running and monitoring for packets every 10ms.
+	KeyListener has been added. This allows for scripts to implement actions on key presses.
+    Pressing F12 will show ::bothelp
+    Pressing F11 will stop the current running script and open the load script window.
+
+	New IdleScript interrupt - keyPressInterrupt
+	Implemented SBot function - KeyPress(int keycode)
 
 
 FEB 23 2021 (again)
